@@ -25,6 +25,8 @@ git-annex (5.20151102.2) UNRELEASED; urgency=medium
   * fsck: When fscking a dead repo, avoid incorrect "fixing location log"
     message, and display a message, since it's unusual to have access to a
     dead repo.
+  * assistant: Pass ssh-options through 3 more git pull/push calls
+    that were missed before.
 
  -- Joey Hess <id@joeyh.name>  Wed, 04 Nov 2015 12:50:20 -0400
 
